# cracking_coding_in_C

./: .gitignore  1.1_unique.c  README.md
1.2_permutations/: CMakeLists.txt  main.c
1.5_oneWay/: CMakeLists.txt  one_way.c  one_way.h  test_one_way.cc
2.1_removeDup/: 2.1_removeDup.c  2.1_removeDup.h  CMakeLists.txt  main.c  test_removeDup.cc
2.8_loopDetect/: CMakeLists.txt  loop.c  loop.h  test_loop.cc
3.1_three_one/: CMakeLists.txt  test_three.cc  three.c  three.h
